# usd-unity-sdk

./: .buginfo  .gitignore  .repoconfig  BUILDING.md  CMakeLists.txt  Dockerfile  README.md  appcollector.yaml
.github/: pull_request_template.md
.yamato/: build_usd.yml  formatting.yml  package-pack.yml  package-promotion.yml  package-publish.yml  package-test.yml  package.metafile  promotion.yml  upm-ci.yml
TestProject/Assets/test_#154/: test_collections.usda
TestProject/Usd-Development-Performance/ProjectSettings/: ProjectSettings.asset
TestProject/Usd-Development/ProjectSettings/: ProjectSettings.asset
TestProject/Usd-Recorder/ProjectSettings/: ProjectSettings.asset
UsdUnitySdk/: CHANGELOG.md
UsdUnitySdk/Editor/: Unity.Formats.USD.Editor.asmdef
UsdUnitySdk/Editor/Scripts/: UsdBuildPostProcess.cs
UsdUnitySdk/Legal/: LICENSE-Alembic.txt  LICENSE-TBB.2016.txt  LICENSE-USD.txt  NOTICE
UsdUnitySdk/Plugins/: USD.NET.Unity.XML  USD.NET.xml
UsdUnitySdk/Plugins/x86_64/: plugInfo.json
UsdUnitySdk/Runtime/: InitUsd.cs  Unity.Formats.USD.Runtime.asmdef
UsdUnitySdk/Runtime/Materials/: SrpVertexColor.mat  StandardVertexColor.mat
UsdUnitySdk/Runtime/Shaders/: ChannelCombiner.shader  CombineAndConvertRoughness.shader  SrpVertexColor.shadergraph  StandardVertexColor.shader
cmake/: CMakeLists.txt  CSharpHelpers.cmake  FindCSharpCompiler.cmake  FindTBB.cmake  FindUnity.cmake  ilm_static_lib.patch  install_usd_bindings.cmake
cmake/modules/: FindMono.cmake  FindUSD.cmake  FindUnity.cmake
package/com.unity.formats.usd/: .npmignore  CHANGELOG.md  Third Party Notices.md  package.json
package/com.unity.formats.usd/Common/: InitUsd.cs  Unity.Formats.USD.Common.asmdef  UsdEditorAnalytics.cs
package/com.unity.formats.usd/Dependencies/USD.NET/: AotAttributes.cs  CMakeLists.txt  DiagnosticHandler.cs  USD.NET.api  USD.NET.asmdef
package/com.unity.formats.usd/Dependencies/USD.NET/collections/: RangeIterator.cs  SampleCollection.cs  SampleEnumerator.cs  SiblingIterator.cs  SubtreeIterator.cs
package/com.unity.formats.usd/Dependencies/USD.NET/pooling/: ArrayPool.cs  ArrayUnpool.cs  PooledArray.cs  PooledHandle.cs
package/com.unity.formats.usd/Dependencies/USD.NET/serialization/: AccessMask.cs  CodeGen.cs  Connectable.cs  IntrinsicTypeConverter.cs  Primvar.cs  Reflect.cs  ReflectionAttributes.cs  Relationship.cs  SampleBase.cs  Scene.cs  TokenCache.cs  TypeBinder.cs  UsdEnums.cs  UsdIo.cs
package/com.unity.formats.usd/Documentation~/: TableOfContents.md  USD Export.md  USD Import.md  USD-in-the-Editor.md  USD.md  index.md
package/com.unity.formats.usd/Editor/: Unity.Formats.USD.Editor.api  Unity.Formats.USD.Editor.asmdef
package/com.unity.formats.usd/Plugins/: USD.NET.xml
package/com.unity.formats.usd/Runtime/: InitUsd.cs  Unity.Formats.USD.Runtime.api  Unity.Formats.USD.Runtime.asmdef
src/: .gitignore  CMakeLists.txt  USD.NET.sln
src/Swig/: .gitignore  CMakeLists.txt  Program.cs  Swig.csproj  gen_interfaces.py  usdCs.i  usdDefines.h
src/Swig/Properties/: AssemblyInfo.cs
src/Swig/pxr/: callback.i  operators.i  pxr.i
src/Swig/scripts/: gen.py  kind.py  sdf.py  usdGeom.py  usdLux.py  usdRi.py  usdShade.py  usdSkel.py  usdVol.py  vt.py
src/Tests/: CMakeLists.txt  Program.cs  Tests.csproj  UnitTest.cs  UnitTestDriver.cs
src/Tests/Cases/: Basic.cs  BasicTests.cs  InstancingTests.cs  MeshTests.cs  OverrideTests.cs  QueryTests.cs  StageTests.cs  TimeSampleTests.cs  UnityIO.cs  UnityIoTests.cs  UsdGeomTests.cs  UsdPreviewSurfaceTests.cs  UsdShadeTests.cs  UsdSkelTests.cs  VerifyAotAttributes.cs
src/Tests/Properties/: AssemblyInfo.cs
src/Tests/Util/: DiagnosticHandler.cs  UsdInitializer.cs
src/USD.NET/: .gitignore  AotAttributes.cs  CMakeLists.txt  USD.NET.csproj  packages.config
src/USD.NET.Unity/: BasisCurvesSample.cs  CMakeLists.txt  CameraSample.cs  CurvesSample.cs  DiagnosticHandler.cs  MaterialSample.cs  MeshSample.cs  MeshSampleBase.cs  ShaderAttributes.cs  ShaderSample.cs  StandardShaderSample.cs  Texture2DSample.cs  USD.NET.Unity.csproj  UnityTypeBindings.cs  UnityTypeConverter.cs  XformSample.cs
src/USD.NET.Unity/Geometry/: BasisCurvesSample.cs  CameraSample.cs  CubeSample.cs  CurvesSample.cs  GprimSample.cs  ImageableSample.cs  MeshSample.cs  MeshSampleBase.cs  PointBasedSample.cs  PointInstancerSample.cs  ScopeSample.cs  SphereSample.cs  XformSample.cs  XformableSample.cs
src/USD.NET.Unity/IO/: HierarchyBuilder.cs  InstanceImporter.cs  MaterialImporter.cs  MaterialMap.cs  MeshImportOptions.cs  MeshImporter.cs  PrimMap.cs  SceneImportOptions.cs  SceneImporter.cs  XformImporter.cs
src/USD.NET.Unity/Properties/: AssemblyInfo.cs
src/USD.NET.Unity/Shading/: MaterialBindingSample.cs  MaterialSample.cs  ParameterInfo.cs  ShaderSample.cs  StandardShaderSample.cs  Texture2DSample.cs
src/USD.NET.Unity/Shading/UnityNative/: StandardShaderSample.cs
src/USD.NET.Unity/Shading/UsdPreviewSurface/: PreviewSurfaceSample.cs  PrimvarReaderFloat2Sample.cs  PrimvarReaderSample.cs  TextureReaderSample.cs
src/USD.NET/Properties/: AssemblyInfo.cs
src/USD.NET/collections/: PathCollection.cs  PathEnumerator.cs  RangeIterator.cs  SampleCollection.cs  SampleEnumerator.cs  SiblingIterator.cs  SubtreeIterator.cs
src/USD.NET/pooling/: ArrayPool.cs  ArrayUnpool.cs  PooledArray.cs
src/USD.NET/serialization/: BackgroundExecutor.cs  CodeGen.cs  Connectable.cs  IntrinsicTypeConverter.cs  Primvar.cs  Reflect.cs  ReflectionAttributes.cs  Relationship.cs  SampleBase.cs  Scene.cs  TokenCache.cs  TypeBinder.cs  UsdEnums.cs  UsdIo.cs
src/UsdCs/: .gitignore  CMakeLists.txt  Info.plist  UsdCs.vcxproj  UsdCs.vcxproj.filters  diagnosticHandler.cpp  diagnosticHandler.h  dll_main.cpp  usdCs_wrap.cpp  usdCs_wrap.h  usdDefines.h
src/UsdCs.xcodeproj/: project.pbxproj
unity-assetpackage/: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  unity-assetpackage.Editor.csproj  unity-assetpackage.csproj
unity-assetpackage/ProjectSettings/: ProjectSettings.asset  QualitySettings.asset
(+1128 files in other folders)
